@@ -24,7 +24,7 @@ sjt.xtab(var.row, var.col, weight.by = NULL, title = NULL,
 Must be a vector of same length as the input vector. Default is 
 \code{NULL}, so no weights are used.}
 
-\item{title}{table caption. By default, \code{title = NULL}, hence no title will be used.}
+\item{title}{table caption, as character vector.}
 
 \item{var.labels}{character vector with variable names, which will be used 
 to label variables in the output.}
